# binseq

./: .gitignore  CMakeLists.txt  History.txt  README.md  TODO  app.lua
doc/: lauchpad_seq.graffle  note_to_pad.ods
lib/: binseq.lua  seq.lua
lib/binseq/: Database.lua  Event.lua  LBatchView.lua  LButton.lua  LHomeView.lua  LLifeView.lua  LMainView.lua  LPatternView.lua  LRecView.lua  LSeq.lua  LSongsView.lua  Launchpad.lua  Pattern.lua  Preset.lua  PresetDb.lua  Sequencer.lua  Song.lua
lib/seq/: Event.lua  LBatchView.lua  LButton.lua  LHomeView.lua  LLifeView.lua  LMainView.lua  LPatternView.lua  LPresetView.lua  LRecView.lua  LSeq.lua  LSongsView.lua  Launchpad.lua  LaunchpadButton.lua  Partition.lua  Pattern.lua  PresetDb.lua  Sequencer.lua  Song.lua
test/: Database_test.lua  Event_test.lua  LBatchView_test.lua  LButton_test.lua  LHomeView_test.lua  LMainView_test.lua  LPatternView_test.lua  LPresetView_test.lua  LSeq_test.lua  LaunchpadButton_test.lua  Launchpad_test.lua  Partition_test.lua  Pattern_test.lua  PresetDb_test.lua  Preset_test.lua  Sequencer_test.lua  Song_test.lua
