# --------------------------------------------------------------
#  seq
#
#  Musical sequencer with novation Launchpad support.
#
#  provides:
#    seq.lua
# --------------------------------------------------------------
set(MODULE_NAME dummy)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lib
  DESTINATION ${LUBYK_LIB}
)
