# --------------------------------------------------------------
#  binseq
#
#  Musical sequencer with novation Launchpad support.
#
#  provides:
#    binseq.lua
# --------------------------------------------------------------
set(MODULE_NAME binseq)

# --------------------------------------------------------------
#  install                                     
# --------------------------------------------------------------
install(DIRECTORY lib
  DESTINATION ${LUBYK_LIB}
)
